# friture

./: .gitattributes  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  HANDOFF.md  HistogramDemo.py  INSTALL  INSTALL.md  INSTALL.txt  MANIFEST.in  PROFILING  PROFILING.txt  README  README.md  README.rst  TODO  TODO.txt  TODOS.md  Ui_about.py  Ui_friture.py  Ui_levels.py  Ui_scope.py  Ui_settings.py  Ui_spectrogram.py  Ui_spectrum.py  about.py  about.ui  acqthread.py  appveyor.yml  audiobackend.py  audiobuffer.py  audiodata.py  audioproc.py  breeze_resources.py  centralwidget.py  changelog.txt  classplot.py  (+73 more)
.github/: dependabot.yml
.github/workflows/: build.yml  install-linux.sh  install-macos.sh  install-windows.cmd  install-windows.ps1  linux.yml  macos.yml  test-linux.sh  windows.yml
.travis/: install.sh
appimage/: friture.desktop  friture.yml
choco/: packages.config
css/: bootstrap.min.css  style.css
doc/: conf.py  index.rst
docs/: architecture-review-20260612.html
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/designs/: calibration-polish-sprint.md
friture/: CentralWidget.qml  ColorScale.qml  ControlBar.qml  DbLevelsDock.qml  DelayEstimator.qml  Dock.qml  FrequencyTracker.qml  FritureHost.qml  FritureMainWindow.qml  Generator.qml  HistPlot.qml  HorizontalScale.qml  ImagePlot.qml  Legend.qml  Levels.qml  LevelsMeter.qml  LevelsText.qml  MainWindow.qml  MeterScale.qml  PitchView.qml  Plot.qml  PlotArea.qml  PlotBackground.qml  PlotGrid.qml  Scope.qml  ScopePlotArea.qml  SingleMeter.qml  Spectrum.qml  VerticalScale.qml  __init__.py  about.py  analyzer.py  audio_ingest.py  audiobackend.py  audiobuffer.py  audioproc.py  axis.py  ballistic_peak.py  bar_label.py  calibrated_display_range.py  (+98 more)
friture/audio/: audioinputthread.py
friture/extension/: exp_smoothing_conv.c  exp_smoothing_conv.pyx  linear_interp.pyx  norm_square.pyx
friture/generators/: BurstSettings.qml  DecimalSpinBox.qml  PinkSettings.qml  SineSettings.qml  SweepSettings.qml  WhiteSettings.qml  burst.py  pink.py  sine.py  sweep.py  white.py
friture/playback/: Control.qml  PlaybackControl.qml  control.py  playback_control_view_model.py  player.py
friture/plotting/: __init__.py  canvasBackground.py  canvasWidget.py  cmrmap.py  cmrmapPlot.py  cmrmap_generate.py  coordinateTransform.py  frequency_scales.py  generated_cmrmap.py  glCanvasWidget.py  grid.py  legendWidget.py  lineitem.py  numpy_interop.py  quadsItem.py  scaleBar.py  scaleDivision.py  scaleWidget.py  titleWidget.py
friture/signal/: __init__.py  color_tranform.py  correlation.py  decimate.py  frequency_resampler.py  online_linear_2D_resampler.py  scipy_resample.py  transform_pipeline.py
friture/test/: helpers.py  runner.py  test_IECScale.py  test_app_bootstrap.py  test_audio_ingest.py  (+28 more)
friture_extensions/: __init__.py  exp_smoothing_conv.pyx  lfilter.pyx  linear_interp.pyx  lookup_table.pyx
installer/: appxmanifest.xml  fix_app_qt_folder_names_for_codesign.py  friture-setup.nsi  friture.wxs
js/: controllers.js
recipes/: friture.yml
resources/: friture.qrc
sandbox/: 2dpainting.py  delay.py  fft_benchmark.py  filter_compare_fir_iir.py  filter_design_fir.py  filter_fir.py  filter_handmade_lfilter.py  filter_opt.pyx  filter_opt_test.py  filter_overlap.py  filter_overlap_add.py  filter_session.py  hellogl.py  latency_hist.py  lesson4.py  lesson6_2d.py  log2_scale_engine.py  log2scale.py  output.py  pink.py  pink2.py  pixel_transfer_test.c  qwt_opengl.py  qwtopengl.py  resample.py  test_ringbuffer.py  test_subsampler.py
scripts/: friture  gprof2dot.py  lsprofcalltree.py
ui/: friture.ui  settings.ui
(+4 files in other folders)
